--- a/style.css
+++ b/style.css
@@ -1,8 +1,9 @@
 * {
     box-sizing: border-box;
 }
-header {
+* {
     font-family: 'Open Sans', sans-serif;
+    font-family: 'Quattrocento Sans', sans-serif;
 }
 a {
     display: block;
@@ -24,6 +25,9 @@ a {
 }
 .col-md-3 {
     width: 25%;
+}
+.col-md-5 {
+    width: 46.7%;
 }
 .col-md-7 {
     width:58%;
@@ -108,4 +112,40 @@ header {
 }
 .search input::-moz-placeholder {
     color: #a4aead;
+}
+.slide {
+    height: 660px;
+    background-image: url("images-blog/img\ \(2\).png");
+    color: white;
+}
+.slide .col-md-12 {
+    flex-direction: column;
+}
+.slide h1 {
+    margin-top: 225px;
+    margin-bottom: 30px;
+    font-weight: bold;
+    font-size: 36px;
+}
+.slide p {
+    margin-bottom: 45px;
+    width: 650px;
+}
+ button {
+    border-radius: 5px;
+    color: white;
+    border: 3px solid white;
+    background-color: rgba(100, 100, 100, 0);
+    padding: 15px 30px;
+}
+button:hover {
+    border: 3px solid rgba(57, 164, 147, 1);
+    background-color: rgba(57, 164, 147, 1);
+}
+.slide-buttons button {
+    margin-right: 10px;
+}
+.description {
+    height: 610px;
+    border-bottom: 1px solid grey;
 }
