--- a/style.css
+++ b/style.css
@@ -5,6 +5,11 @@
     font-family: 'Open Sans', sans-serif;
     font-family: 'Quattrocento Sans', sans-serif;
 }
+input,
+input:active,
+input:focus {
+    outline: none;
+}
 a {
     display: block;
 }
@@ -39,8 +44,11 @@ header {
     color: white;
     background-color: black;
 }
+.head {
+    padding: 25px 0;
+}
 .logo {
-    margin-top: 30px;
+    margin-top: 5px;
     width: 278px;
 }
 .logo a {
@@ -54,8 +62,6 @@ header {
 .menu .li {
     margin-left: 8.5px;
     list-style-type: none;
-    margin-top: 25px;
-    margin-bottom: 25px;
 }
 .menu .li:first-child a {
     border: 3px solid #23b7a3;
@@ -64,6 +70,7 @@ header {
 }
 .menu .li a {
     font-size: 14px;
+    font-weight: 600;
     border-radius: 5px;
     padding: 10px 8px;
     height: 30px;
@@ -72,31 +79,36 @@ header {
     text-decoration: none;
 }
 .menu a:hover {
-    cursor: pointer;
     line-height: 5px;
     border: 3px solid #929b9b;
 }
 .search {
     width: 195px;
     height: 30px;
-    position: relative;
     display: flex;
-    margin-top: 25px;
     margin-left: 90px;
     border: 3px solid #929b9b;
     border-radius: 5px;
 }
 .search input {
-    width: 140px;
+    padding: 8px;
+    width: 155px;
+    height: 100%;
     border: none;
     font-size: 14px;
+    font-weight: 600;
     background-color: rgba(255, 255, 255, 0);
+}
+.search input::-webkit-input-placeholder {
+    color: #a4aead;
+}
+.search input::-moz-placeholder {
+    color: #a4aead;
 }
 .search a {
     margin-top: 5px;
     margin-right: 20px;
     align-self: top;
-    position: absolute;
     display: block;
     right: 0;
 }
@@ -115,7 +127,9 @@ header {
 }
 .slide {
     height: 660px;
+    width: 100%;
     background-image: url("images-blog/img\ \(2\).png");
+    background-repeat: no-repeat;
     color: white;
 }
 .slide .col-md-12 {
@@ -149,3 +163,90 @@ button:hover {
     height: 610px;
     border-bottom: 1px solid grey;
 }
+.grey-block {
+    margin-top: 80px;
+    background-color: #e1e6ea;
+    width: 10px;
+    height: 35px;
+}
+.description  h1 {
+    margin-top: 80px;
+    margin-bottom: 60px;
+    margin-left: 15px;
+    font-size: 36px;
+    font-weight: bold;
+}
+.left-block, .right-block {
+    display: flex;
+    flex-direction: column;
+}
+.left-block p {
+    margin-bottom: 40px;
+    font-size: 16px;
+    color: #8d8f92;
+    line-height: 20px;
+}
+.left-block span {
+    font-weight: bold;
+}
+.links {
+    display: flex;
+    margin-top: 15px;
+}
+.links a {
+    display: block;
+    margin-right: 1px;
+    width: 60px;
+    height: 60px;
+    background-color: #c8cdd0;
+    background-position: center;
+}
+.links a:hover {
+    background-color: #d0d5d9;
+}
+.facebook {
+    background-image: url("images-blog/icon\ \(6\).png")
+}
+.twitter {
+    background-image: url("images-blog/icon\ \(5\).png");
+}
+.google {
+    background-image: url("images-blog/icon\ \(4\).png");
+}
+.basketball {
+    background-image: url("images-blog/icon\ \(3\).png");
+}
+.b-e {
+    background-image: url("images-blog/icon\ \(2\).png");
+}
+.block-num {
+    display: flex;
+
+}
+.text {
+    width: 385px;
+    margin-bottom: 35px;
+}
+.block-num h3 {
+    font-size: 18px;
+    font-weight: bold;
+    color: #292f36;
+    margin-bottom: 20px;
+}
+.block-num p {
+    font-size: 16px;
+    color: #8d8f92;
+    line-height: 20px;
+}
+.green-block {
+    text-align: center;
+    line-height: 50px;
+    font-size: 20px;
+    font-weight: bold;
+    background-color: #23b7a4;
+    color: white;
+    width: 50px;
+    height: 50px;
+    margin-right: 20px;
+}
+
