--- a/style.css
+++ b/style.css
@@ -16,15 +16,11 @@ a {
 .header {
     background-color: #1d2126;
     position: sticky;
-    height: 80px;
     top: 0;
-}
-.head {
     padding: 25px 0;
 }
 .logo {
     margin-top: 5px;
-    width: 278px;
 }
 .logo a {
     text-decoration: none;
@@ -33,41 +29,36 @@ a {
 }
 .menu {
     display: flex;
+    justify-content: space-evenly;
 }
-.menu .li {
-    margin-left: 8.5px;
-    list-style-type: none;
-}
-.menu .li:first-child a {
-    border: 3px solid #23b7a3;
+.menu li:first-child a {
+    border: 2px solid #23b7a3;
     color: #23b7a3;
-    line-height: 5px;
 }
-.menu .li a {
+.menu li a {
+    padding: 9px;
+    text-transform: uppercase;
     font-size: 14px;
     font-weight: 600;
     border-radius: 5px;
-    padding: 10px 8px;
-    height: 30px;
     text-align: center;
     color: #a4aead;
     text-decoration: none;
+    border: 2px solid transparent;
 }
 .menu a:hover {
-    line-height: 5px;
-    border: 3px solid #929b9b;
+    border: 2px solid #929b9b;
 }
 .search {
-    width: 195px;
+    width: 175px;
     height: 30px;
     display: flex;
-    margin-left: 90px;
-    border: 3px solid #929b9b;
+    border: 2px solid #929b9b;
     border-radius: 5px;
 }
 .search input {
     padding: 8px;
-    width: 155px;
+    width: 135px;
     height: 100%;
     border: none;
     font-size: 14px;
@@ -107,9 +98,6 @@ a {
     background-repeat: no-repeat;
     color: white;
 }
-.slide .col-md-12 {
-    flex-direction: column;
-}
 .slide h1 {
     margin-top: 225px;
     margin-bottom: 30px;
@@ -118,14 +106,16 @@ a {
 }
 .slide p {
     margin-bottom: 45px;
-    width: 650px;
 }
- button {
+button {
     border-radius: 5px;
     color: white;
     border: 3px solid white;
     background-color: rgba(100, 100, 100, 0);
-    padding: 15px 30px;
+    padding: 0;
+    width: 125px;
+    height: 45px;
+    text-align: center;
 }
 button:hover {
     border: 3px solid rgba(57, 164, 147, 1);
@@ -135,8 +125,8 @@ button:hover {
     margin-right: 10px;
 }
 .description {
-    height: 610px;
-    border-bottom: 1px solid grey;
+    padding-bottom: 100px;
+    border-bottom: 1px solid #dde1e4;
 }
 .grey-block {
     margin-top: 80px;
@@ -196,10 +186,8 @@ button:hover {
 }
 .block-num {
     display: flex;
-
 }
 .text {
-    width: 385px;
     margin-bottom: 35px;
 }
 .block-num h3 {
@@ -214,13 +202,13 @@ button:hover {
     line-height: 20px;
 }
 .green-block {
+    flex: 0 0 50px;
     text-align: center;
     line-height: 50px;
     font-size: 20px;
     font-weight: bold;
     background-color: #23b7a4;
     color: white;
-    width: 50px;
     height: 50px;
     margin-right: 20px;
 }
