--- a/grid.css
+++ b/grid.css
@@ -64,6 +64,9 @@
     flex: 0 0 100%;
     max-width: 100%;
 }
+.search {
+    display: none;
+}
 
 
 @media(min-width: 768px) {
@@ -118,6 +121,12 @@
         flex: 0 0 100%;
         max-width: 100%;
     }
+    .member {
+        justify-content: space-evenly;
+    }
+    .member-of-team {
+        margin-bottom: 25px;
+    }
 }
 @media(min-width: 992px) {
     .container {
@@ -170,6 +179,9 @@
     .col-md-12 {
         flex: 0 0 100%;
         max-width: 100%;
+    }
+    .search {
+        display: block;
     }
     .slide p {
         width: 650px;
@@ -236,13 +248,19 @@
     .navigation {
         overflow: scroll;
     }
-    .search {
-        display: none;
-    }
     .right-block {
         margin-top: 50px;
     }
     .menu {
         justify-content: space-between;
+    }
+    .member {
+        justify-content: center;
+    }
+    .member-of-team {
+        margin-bottom: 25px;
+    }
+    .img {
+        justify-content: space-evenly;
     }
 }
