--- a/style.css
+++ b/style.css
@@ -54,15 +54,21 @@ p {
     border: 2px solid #929b9b;
 }
 .search {
-    width: 175px;
+    width: 195px;
     height: 30px;
+    position: relative;
     display: flex;
     border: 2px solid #929b9b;
     border-radius: 5px;
 }
+.search form {
+    width: 140px;
+    position: absolute;
+}
 .search input {
-    padding: 8px;
-    width: 135px;
+    padding: 5px;
+    padding-bottom: 0;
+    width: 140px;
     height: 100%;
     border: none;
     font-size: 14px;
@@ -75,25 +81,16 @@ p {
 .search input::-moz-placeholder {
     color: #a4aead;
 }
-.search a {
-    margin-top: 5px;
-    margin-right: 20px;
-    align-self: top;
-    display: block;
-    right: 0;
-}
-.search .search-img {
+.search-img {
+    background-image: url("images-blog/icon\ \(1\).png");
     background-repeat: no-repeat;
     background-position: center;
-    background-image: url("images-blog/icon\ \(1\).png");
     width: 15px;
     height: 15px;
-}
-.search input::-webkit-input-placeholder {
-    color: #a4aead;
-}
-.search input::-moz-placeholder {
-    color: #a4aead;
+    position: absolute;
+    right: 0;
+    margin-top: 5px;
+    margin-right: 15px;
 }
 .slide {
     height: 660px;
@@ -138,7 +135,7 @@ button:hover {
     width: 10px;
     height: 35px;
 }
-.description  h1, .team h1, .list-work h1 {
+.description  h1, .team h1, .list-work h1, .contacts h1{
     margin-top: 80px;
     margin-bottom: 60px;
     margin-left: 15px;
@@ -404,4 +401,63 @@ button:hover {
     font-size: 16px;
     font-weight: 400;
     color: #dcdfe1;
+}
+.map {
+    background-image: url("images-blog/img\ \(1\).png");
+    background-repeat: no-repeat;
+    height: 350px;
+    width: 100%;
+}
+.contact-inform {
+    display: flex;
+    flex-direction: column;
+}
+.contact-inform h3 {
+    text-transform: uppercase;
+    color: #292f36;
+    font-size: 20px;
+    margin-top: 60px;
+    margin-bottom: 40px;
+}
+.contact-inform p {
+    color: #8d8f92;
+    font-size: 16px;
+    font-weight: 400;
+    margin-bottom: 35px;
+}
+.contact-inform span {
+    font-weight: bold;
+}
+.footer {
+    height: 95px;
+    background-color: #3a454d;
+    display: flex;
+    align-items: center;
+}
+.footer h6 {
+    color: white;
+    font-size: 14px;
+    font-weight: 400;
+    
+}
+.footer-icons div {
+    background-repeat: no-repeat;
+    background-position: center;
+    height: 20px;
+    width: 33px;
+}
+.footer-tw {
+    background-image: url("images-blog/icon\ \(19\).png");
+}
+.footer-fb {
+    background-image: url("images-blog/icon\ \(18\).png");
+}
+.footer-skype {
+    background-image: url("images-blog/icon\ \(17\).png");
+}
+.footer-be {
+    background-image: url("images-blog/icon\ \(16\).png");
+}
+.footer-in {
+    background-image: url("images-blog/icon\ \(15\).png");
 }
