--- a/style.css
+++ b/style.css
@@ -53,6 +53,70 @@ p {
 .menu a:hover {
     border: 2px solid #929b9b;
 }
+/* mobile menu */
+@media (max-width: 767px) {
+    .nav-mobile-menu {
+        display: block;
+        width: 15px;
+        height: 15px;
+        position: relative;
+    }
+    .nav-mobile-menu span {
+        height: 1px;
+        background-color: #fff;
+        position: absolute;
+        right: 0;
+        left: 0;
+        transition: .25s ease-in-out;
+    }
+    .nav-mobile-menu span:first-child {
+        top: 3px;
+    }
+    .nav-mobile-menu span:nth-child(2) {
+        top: 7px;
+    }
+    .nav-mobile-menu span:last-child {
+        bottom: 3px;
+    }
+    .navigation {
+        overflow: scroll;
+        position: fixed;
+        top: 0;
+        right: 0;
+        bottom: 0;
+        width: 280px;
+        max-width: 280px;
+        transform: translateX(150%);
+        transition:all 500ms ease-in-out;
+    }
+    .hidden-menu {
+        opacity: 0;
+        visibility: hidden;
+    }
+
+    .nav-mobile-menu.active-menu span:first-child {
+        top: 50%;
+        transform: rotate(45deg);
+    }
+    .nav-mobile-menu.active-menu span:nth-child(2) {
+        top: 50%;
+        transform: rotate(-45deg);
+    }
+    .nav-mobile-menu.active-menu span:last-child {
+        transform: scale(0);
+    }
+    .navigation.active-menu {
+        opacity: 1;
+        visibility: visible;
+        top: 34px;
+        transform: translateX(0);
+        padding: 25px;
+        background-color: #1d2126;
+    }
+    .navigation.active-menu .menu {
+        flex-direction: column;
+    }
+}
 .search {
     width: 195px;
     height: 30px;
