--- a/style.css
+++ b/style.css
@@ -53,8 +53,9 @@ p {
 .menu a:hover {
     border: 2px solid #929b9b;
 }
-/* mobile menu */
+
 @media (max-width: 767px) {
+    /* mobile menu */
     .nav-mobile-menu {
         display: block;
         width: 15px;
@@ -116,6 +117,14 @@ p {
     .navigation.active-menu .menu {
         flex-direction: column;
     }
+    /* mobile form */
+
+    .form-row {
+        flex-direction: column;
+    }
+    .form input, .form textarea {
+        width: 100%;
+    }
 }
 .search {
     width: 195px;
@@ -172,7 +181,7 @@ p {
 .slide p {
     margin-bottom: 45px;
 }
-button {
+.button-with-hover {
     border-radius: 5px;
     color: white;
     border: 3px solid white;
@@ -182,7 +191,7 @@ button {
     height: 45px;
     text-align: center;
 }
-button:hover {
+.button-with-hover:hover {
     border: 3px solid rgba(57, 164, 147, 1);
     background-color: rgba(57, 164, 147, 1);
 }
@@ -315,7 +324,7 @@ button:hover {
     line-height: 20px;
     z-index: 2;
 }
-.name {
+.name-member {
     font-size: 16px;
     text-transform: uppercase;
     font-weight: bold;
@@ -358,7 +367,7 @@ button:hover {
     margin-bottom: 60px;
     justify-content: center;
 }
-.landscape-button button {
+.landscape-button button, .form-button {
     width: 150px;
     height: 45px;
 }
@@ -466,6 +475,9 @@ button:hover {
     font-weight: 400;
     color: #dcdfe1;
 }
+.contacts {
+    padding-bottom: 100px;
+}
 .map {
     background-image: url("images-blog/img\ \(1\).png");
     background-repeat: no-repeat;
@@ -491,6 +503,54 @@ button:hover {
 }
 .contact-inform span {
     font-weight: bold;
+}
+.form-block {
+    flex-direction: column;
+    position: relative;
+}
+.form {
+    padding: 30px;
+    width: 100%;
+    background-color: #fff;
+}
+.form-row {
+    display: flex;
+    width: 100%;
+}
+.form textarea {
+    width: 100%;
+}
+.form input, .form textarea, .modal-block .input {
+    border: none;
+    background-color: #eaeef1;
+    border-radius: 4px;
+    padding: 0;
+}
+.form input {
+    height: 45px;
+    margin-bottom: 30px;
+}
+.name input, .email input {
+    width: 100%;
+}
+.form textarea {
+    height: 160px;
+}
+.form h6, .modal-block h6 {
+    text-transform: uppercase;
+    font-size: 14px;
+    color: #8d8f92;
+    margin-bottom: 10px;
+}
+.form-button {
+    border-radius: 5px;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    background-color: #23b7a4;
+    font-size: 14px;
+    margin-left: 30px;
+    margin-bottom: 30px;
 }
 .footer {
     height: 95px;
@@ -524,4 +584,60 @@ button:hover {
 }
 .footer-in {
     background-image: url("images-blog/icon\ \(15\).png");
+}
+.modal {
+    position: fixed;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    background-color: rgba(0, 0, 0, 0.3);
+    opacity: 0;
+    visibility: visible;
+}
+.modal-block {
+    display: flex;
+    flex-direction: column;
+    position: relative;
+    padding: 20px;
+    width: 280px;
+    background-color: #fff;
+    margin: 0 auto;
+    
+}
+.modal-block input {
+    height: 45px;
+    margin-bottom: 15px;
+}
+.modal-block h3 {
+    text-align: center;
+    text-transform: uppercase;
+    font-size: 20px;
+    color: #292f36;
+    font-weight: bold;
+    padding-bottom: 20px;
+}
+.button-submit {
+    border-radius: 5px;
+    color: white;
+    text-transform: uppercase;
+    border: none;
+    background-color: #23b7a4;
+    font-size: 14px;
+}
+.close {
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
+}
+.show {
+    opacity: 1;
+    visibility: visible;
+}
+.hide {
+    opacity: 0;
+    visibility: hidden;
 }
